WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239101
REGRESSION (
r292043
): [ Mac ] fast/block/positioning/fixed-container-with-relative-parent.html is a flaky image failure
https://bugs.webkit.org/show_bug.cgi?id=239101
Summary
REGRESSION (r292043): [ Mac ] fast/block/positioning/fixed-container-with-rel...
Karl Rackler
Reported
2022-04-11 19:48:14 PDT
Created
attachment 457307
[details]
Actual Description: fast/block/positioning/fixed-container-with-relative-parent.html The first image failure that I see this on the dashboard was 03/29/22 at
r292045
, but I was not able to find a commit that seemed relevant that would have caused this. REPRODUCTION STEPS I can reproduce this on
r292043
, but unable to reproduce on
r292042
. Command: run-webkit-tests --root --exit-after-n-failures 1 --exit-after-n-crashes-or-timeouts 1 --iterations 50 fast/block/positioning/fixed-container-with-relative-parent.html Result: [10/50] fast/block/positioning/fixed-container-with-relative-parent.html failed unexpectedly (reference mismatch maxDifference=255; totalPixels=1240) Exiting early after 2 failures. 10 tests run. 8 tests ran as expected, 2 didn't (40 didn't run): History:
https://results.webkit.org/?suite=layout-tests&test=fast%2Fblock%2Fpositioning%2Ffixed-container-with-relative-parent.html&platform=mac&limit=49920&version_name=Big%20Sur&version_name=Monterey
Link to image diff:
https://build.webkit.org/results/Apple-BigSur-Debug-AppleSilicon-WK2-Tests/r292729%20(5534)/fast/block/positioning/fixed-container-with-relative-parent-diffs.html
Attachments
Actual
(10.95 KB, image/png)
2022-04-11 19:48 PDT
,
Karl Rackler
no flags
Details
Expected
(10.92 KB, image/png)
2022-04-11 19:48 PDT
,
Karl Rackler
no flags
Details
Patch
(8.83 KB, patch)
2022-04-12 21:33 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(10.85 KB, patch)
2022-04-13 07:35 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(10.87 KB, patch)
2022-04-13 08:47 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(11.19 KB, patch)
2022-04-13 18:37 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Karl Rackler
Comment 1
2022-04-11 19:48:44 PDT
Created
attachment 457308
[details]
Expected
Radar WebKit Bug Importer
Comment 2
2022-04-11 19:49:34 PDT
<
rdar://problem/91603539
>
Karl Rackler
Comment 3
2022-04-12 10:47:18 PDT
Marked expecrtation here while the issue is investigated.
r292777
alan
Comment 4
2022-04-12 21:33:52 PDT
Created
attachment 457506
[details]
Patch
alan
Comment 5
2022-04-13 07:35:51 PDT
Created
attachment 457530
[details]
Patch
alan
Comment 6
2022-04-13 08:47:01 PDT
Created
attachment 457535
[details]
Patch
Simon Fraser (smfr)
Comment 7
2022-04-13 11:09:45 PDT
Comment on
attachment 457535
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=457535&action=review
> Source/WebCore/rendering/RenderBlock.cpp:180 > + for (auto it = descendants->begin(); it != descendants->end(); ++it) {
Does ListHashSet not support for (auto thing : *descendants)?
alan
Comment 8
2022-04-13 11:13:03 PDT
Comment on
attachment 457535
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=457535&action=review
>> Source/WebCore/rendering/RenderBlock.cpp:180 >> + for (auto it = descendants->begin(); it != descendants->end(); ++it) { > > Does ListHashSet not support for (auto thing : *descendants)?
It does have support for range loop, but in this case "it" is used at "descendants->insertBefore(it..."
EWS
Comment 9
2022-04-13 11:51:31 PDT
Committed
r292817
(
249597@main
): <
https://commits.webkit.org/249597@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 457535
[details]
.
WebKit Commit Bot
Comment 10
2022-04-13 15:20:00 PDT
Re-opened since this is blocked by
bug 239305
alan
Comment 11
2022-04-13 18:37:10 PDT
Created
attachment 457583
[details]
Patch
EWS
Comment 12
2022-04-13 20:58:08 PDT
Committed
r292855
(
249626@main
): <
https://commits.webkit.org/249626@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 457583
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug